now with 3 assignments

--- a/app/less/game.less
+++ b/app/less/game.less
@@ -3,4 +3,11 @@
     width: 500px;
     height: 400px;
   }
+  .heading {
+    a {
+      cursor:pointer;
+      color: blue;
+    }
+    margin-bottom: 10px;
+  }
 }
