--- a/app/less/game.less
+++ b/app/less/game.less
@@ -1,13 +1,25 @@
+body {
+  font-family: andale mono, courier new, monospace;
+}
 #assignment {
-  .code {
-    width: 500px;
-    height: 400px;
-  }
+  width: 500px;
   .heading {
     a {
       cursor:pointer;
       color: blue;
     }
+    .description {
+      margin-top: 10px;
+      background: #ffff99;
+    }
     margin-bottom: 10px;
+  }
+  .code {
+    width: 100%;
+    height: 400px;
+    font-size: 20px;
+  }
+  .run {
+    font-size: 20px;
   }
 }
