--- a/app/less/game.less
+++ b/app/less/game.less
@@ -4,10 +4,6 @@ body {
 #assignment {
   width: 500px;
   .heading {
-    a {
-      cursor:pointer;
-      color: blue;
-    }
     .description {
       margin-top: 10px;
       background: #ffff99;
@@ -21,5 +17,11 @@ body {
   }
   .run {
     font-size: 20px;
+  }
+  .navi {
+    a {
+      cursor:pointer;
+      color: blue;
+    }
   }
 }
