--- a/app/less/game.less
+++ b/app/less/game.less
@@ -1,6 +1,15 @@
 body {
   font-family: andale mono, courier new, monospace;
 }
+h1 {
+  margin-bottom: 0;
+}
+#info {
+  margin-top: 5px;
+  margin-bottom: 15px;
+  margin-left: 3px;
+  font-size: 12px;
+}
 #assignment {
   background: #eeeeee;
   padding: 10px;
