--- a/app/less/game.less
+++ b/app/less/game.less
@@ -11,6 +11,8 @@ h1 {
   font-size: 12px;
 }
 #assignment {
+  display: inline-block;
+  float: left;
   background: #eeeeee;
   padding: 10px;
   width: 500px;
@@ -49,7 +51,11 @@ h1 {
   }
 }
 #visualizer {
+  display: inline-block;
+  float: left;
+  height: 100%;
+  width: 300px;
   svg {
-    height: 40px;
+    height: 60px;
   }
 }
