--- a/app/less/game.less
+++ b/app/less/game.less
@@ -1,45 +1,98 @@
-body {
+@assignment_width: 470px;
+html, body {
   font-family: andale mono, courier new, monospace;
+  width: 100%;
+  height: 100%;
+  color: #383838;
+}
+body {
+  background-color: #f7fbfc;
+}
+h1,h2 {
+  text-transform: uppercase;
+  margin-top: 0;
 }
 h1 {
   margin-bottom: 0;
+  width: @assignment_width;
+  background-image: url('images/badassbacon.png');
+  background-repeat: no-repeat;
+  height: 100px;
+  line-height: 100px;
+  padding: 0 120px;
+  background-size: 114px 100px;
+  a {
+    font-size: 10px;
+    vertical-align: top;
+  }
 }
+
+h1, #content {
+  width: 900px;
+  margin: 0 auto;
+}
+
+a, a:visited {
+  color: #337610;
+  cursor: pointer;
+}
+
+#content {
+  width: 900px;
+  margin: 30px auto;
+}
+
+#learn {
+  margin-top: 20px;
+}
+
 #info {
   margin-top: 5px;
   margin-bottom: 15px;
   margin-left: 3px;
   font-size: 12px;
 }
+.run-button {
+  font-size: 20px;
+  background: #659324;
+  padding: 6px 20px;
+  border-radius: 4px;
+  background-image: linear-gradient(to bottom,#81bc2e,#659324);
+  color: white;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+  box-shadow: 0 1px 0 0 rgba(0,0,0,0.2),inset 0 -1px 0 0 rgba(0,0,0,0.3);
+  &.disabled {
+    background-image: linear-gradient(to bottom, #D6D6D5, #8B8B8B);
+    background: #9DA099;
+    color: #cccccc;
+    cursor: default;
+  }
+}
+@heading_height: 100px;
 #assignment {
+  width: @assignment_width;
   display: inline-block;
   float: left;
-  background: #eeeeee;
-  padding: 10px;
-  width: 500px;
   .heading {
-    h2 {
-      text-decoration: underline;
-    }
+    height: @heading_height;
+    position: relative;
     .description {
-      margin-top: 10px;
       text-decoration: none;
     }
-    margin-bottom: 10px;
+    .run {
+      .run-button;
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
   .code {
-    width: 90%;
-    display: block;
-    height: 400px;
-    font-size: 20px;
-  }
-  .run {
-    font-size: 20px;
+    display: none;
   }
   .navi {
     margin-top: 10px;
     a {
       cursor:pointer;
-      color: blue;
       &.next {
         float: right;
       }
@@ -47,10 +100,11 @@ h1 {
   }
 }
 #output {
+  margin-top: @heading_height;
   display: inline-block;
   float: left;
-  height: 100%;
-  width: 300px;
+  height: 370px;
+  width: 400px;
   #visualizer {
     svg {
       height: 60px;
