--- a/app/less/game.less
+++ b/app/less/game.less
@@ -72,6 +72,7 @@ a, a:visited {
     height: @heading_height;
     position: relative;
     .description {
+      width: @code_width;
       text-decoration: none;
     }
   }
