--- a/app/less/game.less
+++ b/app/less/game.less
@@ -124,10 +124,36 @@ a, a:visited {
 #result {
   display: inline-block;
   margin-left: 10px;
-  width: 60px;
   height: 20px;
   line-height: 20px;
-  &.failed { color: @red; }
+  .tip { display: none }
+  &.failed { 
+    color: @red; 
+    .tip {
+      display: inline-block;
+      cursor: pointer;
+      position: relative;
+      width: 24px;
+      height: 24px;
+      background: url('images/help.png') no-repeat scroll 0px 0px transparent;
+      background-size: 24px 24px;
+      margin-left: 3px;
+      margin-bottom: -6px;
+      .tip-text { 
+        opacity: 0; 
+        position: absolute;
+        margin-top: -4px;
+        background: green;
+        border-radius: 3px;
+        color: white;
+        padding: 5px;
+        transition: opacity 0.5s;
+      }
+      &:hover .tip-text {
+        opacity: 1;
+      }
+    }
+  }
   &.success { color: @green; }
   &.none {
     .text-hidden;
